stopped molecules from getting squished

--- a/src/app/features/story-player/scenes/scene-gather-ingredients/scene-gather-ingredients.scss
+++ b/src/app/features/story-player/scenes/scene-gather-ingredients/scene-gather-ingredients.scss
@@ -5,32 +5,32 @@
 }
 
 .smog{
-  width: 20rem;
-  height: 20rem;
+  width: 10rem;
+  height: 10rem;
   border-radius: 50%;
   background: rgba(87, 59, 15, 0.9);
   border: 3px solid #000000;
   display: flex;
-  transform: scale(0.5);
-  transition: all 0.5s ease;
   box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3);
   position: relative;
 }
 
 .ozone-cloud{
     position: relative;
-    bottom: 10rem;
-    left: 30rem;
+    bottom: 5rem;
+    left: 50rem;
 }
 
 .molecule-circle {
-  width: 5rem;
-  height: 5rem;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.9);
   border: 3px solid #007bff;
-  display: flex;
+  display: flex ;
+  flex-shrink: 0;
   align-items: center;
   justify-content: center;
   box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3);
+  ;
 }
